--- a/MvcNetCoreAzureStorage/Views/AzureBlobs/Index.cshtml
+++ b/MvcNetCoreAzureStorage/Views/AzureBlobs/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<string>
 
-<h1 style="color:blue">Azure Containers</h1c>
+<h1 style="color:blue">Azure Containers</h1>
 
 <a asp-action="CreateContainer" asp-controller="AzureBlobs"
    class="btn btn-success">
